fix(md-enhance): fix align feature

--- a/packages/md-enhance/src/client/styles/align.scss
+++ b/packages/md-enhance/src/client/styles/align.scss
@@ -1,17 +1,15 @@
-.custom-container {
-  &.left {
-    text-align: left;
-  }
+.align-left {
+  text-align: left;
+}
 
-  &.center {
-    text-align: center;
-  }
+.align-center {
+  text-align: center;
+}
 
-  &.right {
-    text-align: right;
-  }
+.align-right {
+  text-align: right;
+}
 
-  &.justify {
-    text-align: justify;
-  }
+.align-justify {
+  text-align: justify;
 }
